// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parsing Lite Table 1`] = `
[
  {
    "id": "6ryvL9V2",
    "syntax": "TypeScript",
    "title": "AuthGuard",
  },
  {
    "id": "jWHZjpCC",
    "syntax": "Rust",
    "title": "grid paths",
  },
  {
    "id": "Lg2LV0a0",
    "syntax": "Bash",
    "title": "fdsafsd",
  },
  {
    "id": "pJEPaduj",
    "syntax": "Python",
    "title": "Untitled",
  },
]
`;

exports[`Parsing Lite Table with limit=2 1`] = `
[
  {
    "id": "6ryvL9V2",
    "syntax": "TypeScript",
    "title": "AuthGuard",
  },
  {
    "id": "jWHZjpCC",
    "syntax": "Rust",
    "title": "grid paths",
  },
]
`;
